@@ -12,6 +12,7 @@
 #define KALEH_ADVANCEMENT HP_RAISE XP EFFECT VARIATION
     [advancement]
         max_times=1
+        always_display=yes
         [effect]
             apply_to=hitpoints
             increase_total={HP_RAISE}
